--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blackish">#18130e</color>
+    <color name="yellow">#edcc65</color>
+    <color name="beige">#af9d85</color>
+    <color name="brown">#885932</color>
+    <color name="gray">#6c7c74</color>
+
+
 </resources>
