--- a/app/src/main/res/layout/fragment_hub.xml
+++ b/app/src/main/res/layout/fragment_hub.xml
@@ -12,60 +12,63 @@
         android:background="@color/beige">
 
         <Button
-            android:id="@+id/hubToNewVehicleId"
+            android:id="@+id/hubToSubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="132dp"
-            android:text="new id"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="164dp"
+            android:text="submit violation"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hubToScanButton"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <Button
-            android:id="@+id/hubToScanButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="scan"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hubToViewButton" />
+            app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
 
         <Button
             android:id="@+id/hubToViewButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="view"
+            android:text="my submitted violations"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/hubToSubmitButton" />
 
         <Button
-            android:id="@+id/hubToSubmitButton"
+            android:id="@+id/hubToScanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="SUBMIT"
-            app:layout_constraintBottom_toTopOf="@+id/hubToViewButton"
+            android:text="scan code"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hubToViewButton" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="334dp"
-            android:layout_height="524dp"
-            android:layout_marginStart="66dp"
-            android:layout_marginEnd="66dp"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/tesla_png_picture_2542355059__1_"
-            app:layout_constraintBottom_toTopOf="@+id/hubToScanButton"
+        <TextView
+            android:id="@+id/wlcmHubTextView"
+            android:layout_width="335dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="46dp"
+            android:layout_marginEnd="38dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="greetings"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBarHub"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="212dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.903"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
