--- a/app/src/main/res/layout/fragment_found_car.xml
+++ b/app/src/main/res/layout/fragment_found_car.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/beige">
 
         <TextView
             android:id="@+id/foundModel"
@@ -65,6 +66,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/foundColor" />
+
+        <Button
+            android:id="@+id/buttonBackFound"
+            android:layout_width="50dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="21dp"
+            app:cornerRadius="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
