--- a/app/src/main/res/layout/fragment_hub.xml
+++ b/app/src/main/res/layout/fragment_hub.xml
@@ -47,7 +47,7 @@
             android:layout_width="335dp"
             android:layout_height="0dp"
             android:layout_marginStart="38dp"
-            android:layout_marginTop="46dp"
+            android:layout_marginTop="76dp"
             android:layout_marginEnd="38dp"
             android:fontFamily="sans-serif-medium"
             android:text="greetings"
@@ -55,6 +55,7 @@
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,6 +70,23 @@
             app:layout_constraintHorizontal_bias="0.903"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
+
+        <Button
+            android:id="@+id/buttonLogOut"
+            android:layout_width="70dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="325dp"
+            android:layout_marginBottom="31dp"
+            android:text="log out"
+            android:textColor="#BF0404"
+            android:textColorLink="#E4DEDE"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toTopOf="@+id/wlcmHubTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
