--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -12,6 +12,17 @@
         android:layout_height="match_parent">
 
         <Button
+            android:id="@+id/backButtonView"
+            android:layout_width="41dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="16dp"
+            android:textSize="8sp"
+            app:cornerRadius="50px"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
             android:id="@+id/viewToScanButton2"
             android:layout_width="139dp"
             android:layout_height="54dp"
@@ -26,11 +37,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="381dp"
-            android:layout_height="384dp"
-            android:layout_marginStart="10dp"
+            android:layout_width="372dp"
+            android:layout_height="370dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/viewToAddButton"
@@ -51,5 +62,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.095"
             app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
